fim da tela esqueci minha senha

--- a/css/css2.css
+++ b/css/css2.css
@@ -23,6 +23,12 @@
 	}
 /* --- FIM ---*/
 
+/* --- esqueci minha senha --- */
+	#img_senha{
+
+	}
+/* --- FIM ---*/
+
 /* apresentação */
 	* {box-sizing:border-box}
 
