--- a/view/home/conf/css/home.css
+++ b/view/home/conf/css/home.css
@@ -18,7 +18,7 @@ img{
 #submenu{
 	position: relative;		/*Ajuda posicionar elementos*/
 	width: 100%;			/*Largura automatica*/
-	border: 1px solid red;	/*Borda para facilitar a visualização*/
+	/*border: 1px solid red;	/*Borda para facilitar a visualização*/
 	left: 0px;
 	top: -90px;
 }
